@@ -474,7 +474,7 @@ literal|"9"
 argument_list|,
 literal|"lowerfilt"
 argument_list|,
-literal|"pixmaa"
+literal|"pixmaa 12345"
 argument_list|)
 operator|)
 argument_list|)
@@ -640,6 +640,39 @@ literal|"documemt"
 argument_list|)
 argument_list|,
 literal|"/spellcheck=={'suggestions':['documemt',{'numFound':1,'startOffset':0,'endOffset':8,'suggestion':['document']}]}"
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testNumericQuery
+specifier|public
+name|void
+name|testNumericQuery
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+name|rh
+argument_list|,
+name|SpellCheckComponent
+operator|.
+name|COMPONENT_NAME
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"12346"
+argument_list|)
+argument_list|,
+literal|"/spellcheck=={'suggestions':['12346',{'numFound':1,'startOffset':0,'endOffset':5,'suggestion':['12345']}]}"
 argument_list|)
 expr_stmt|;
 block|}
